[package]
name = "refresh"
version = "0.1.35"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dotenvy = "0.15.7"
futures = "0.3.31"
indicatif = "0.17.11"
path-absolutize = "3.1.1"
rayon = "1.10.0"
rpassword = "7.4.0"
shellexpand = "3.1.1"
tracing = "0.1.41"
whoami = "1.6.1"

[dependencies.clap]
version = "4.5.43"
features = ["derive", "env"]

[dependencies.reqwest]
version = "0.12.22"
features = ["stream", "deflate", "json", "rustls-tls"]
default-features = false

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.142"
features = ["preserve_order"]

[dependencies.tokio]
version = "1.47.1"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3.19"
features = ["env-filter", "serde", "serde_json", "json"]

[target.aarch64-unknown-linux-musl.dependencies.reqwest]
version = "0.12.22"
features = ["stream", "deflate", "json", "rustls-tls"]
default-features = false

[target.aarch64-unknown-linux-musl.dev-dependencies]

[target.aarch64-unknown-linux-musl.build-dependencies]

[target.x86_64-unknown-linux-musl.dependencies.reqwest]
version = "0.12.22"
features = ["stream", "deflate", "json", "rustls-tls"]
default-features = false

[target.x86_64-unknown-linux-musl.dev-dependencies]

[target.x86_64-unknown-linux-musl.build-dependencies]

[lints.clippy]
collapsible_if = "allow"

[lints.rust]
warnings = "deny"
